# thesis-winfo

./: .gitmodules  Doc.md  README.md  evaluation.typ  frontmatter.typ  implementation.typ  introduction.typ  main.typ  modelling.typ  references.bib  theory.typ
.github/workflows/: build.yaml
code/: README.md  pyproject.toml
code/prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/scripts/: README.md  pyproject.toml
code/scripts/data-collection/: README.md  collect_set.py  prefilter.py
code/scripts/eval/: README.md  insert_random_scenario.py  random_dropped_scenario.py  shared.py  simple_scenario.py  topx_scenario.py
code/scripts/ml-model/: README.md  main.py  pipeline.py
code/scripts/ml_model/: README.md  extract_steps.py  extract_training_token_occurences.py  fulltrain.sh  main.py  model.py  pipeline.py  random_split_preprocessed.py  simple_step_trace_preprocessor.py
code/scripts/scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
figures/agv/: run.typ
figures/aiqs/: steps_drop.typ  system_check_quality.typ  system_pick.typ
figures/dps/: system_drop.typ
figures/drill/: steps_drop.typ  steps_pick.typ
figures/hbw/: steps_drop.typ  steps_pick.typ  system_drop.typ
figures/mill/: steps_drop.typ  steps_mill.typ  system_drop.typ
frontmatter/: outline.typ  titlepage.typ
writeup/: README.md  conclusion.typ  evaluation.typ  frontmatter.typ  implementation.typ  introduction.typ  lib.typ  main.typ  modelling.typ  references.bib  theory.typ
writeup/figures/: all_implicit_control.typ  direct_connect_drill_mill.typ  (+1 more)
(+60 files in other folders)
