[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "numpy>=2.4.6",
    "torch>=2.12.0",
]
[tool.uv]
package = true
[tool.setuptools]
py-modules = ["heraklit_equiv_checker", "ml_model", "eval"]
